[tool.poetry]
name = "post-blog-post"
version = "0.1.0"
description = "A small tool for posting to DEV, Medium and Hashnode from a .md file"
authors = ["Jean-Baptiste Rocher <jeanb.rocher@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
reorder-python-imports = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
